# ktda

./: .gitignore  Procfile  README.md  f.sh  load.sh  manage.py  pyproject.toml  requirements.txt
ktda/: settings.py  urls.py  wsgi.py
ktda/graphql/: mutations.py  schema.py  types.py
ktda/messages/: models.py
ktda/students/: models.py  serializers.py  sms.py  urls.py  utils.py  views.py
ktda/students/management/commands/: fuckit.py  load.py  suckit.py
ktda/students/migrations/: 0001_initial.py
web/: README.md  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.tsx  index.css
web/src/components/Button/: index.tsx
web/src/components/card/: index.tsx
web/src/components/error/: index.tsx
web/src/components/form/: input.tsx  search.tsx
web/src/components/graph/: index.tsx  linegraph.tsx  studentlinegraph.tsx
web/src/components/layout/: index.tsx  layout.ts
web/src/components/modal/: index.tsx
web/src/components/table/: index.tsx
web/src/components/tabs/: index.tsx
web/src/components/text/: index.tsx
web/src/pages/: index.tsx
web/src/pages/dashboard/: ProgramInsights.tsx  UniversityTransation.tsx  index.tsx  program_insights.tsx  university_transation.tsx
web/src/pages/dashboard/components/: InsightCard.tsx
web/src/pages/insights/: index.tsx
web/src/pages/messages/: index.tsx  messages.tsx  new_message.tsx
web/src/pages/students/: index.tsx  list.tsx
web/src/queries/: databoard.ts  index.ts  insights.ts  students.ts
web/src/styles/: colors.ts
web/src/utils/: index.ts
(+21 files in other folders)
