[tool.poetry]
name = "ktda"
version = "0.1.0"
description = "The KTDA student"
authors = ["warukira <dwarukira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
africastalking = "1.1.7"
aniso8601 = "6.0.0"
appnope = "0.1.0"
astroid = "2.2.5"
backcall = "0.1.0"
certifi = "2019.6.16"
chardet = "3.0.4"
contextlib2 = "0.5.5"
decorator = "4.4.0"
Django = "2.2.4"
django-cors-headers = "3.1.0"
djangorestframework = "3.10.2"
graphene = "2.1.7"
graphene-django = "2.5.0"
graphql-core = "2.2.1"
graphql-relay = "2.0.0"
idna = "2.8"
ipython = "7.7.0"
ipython_genutils = "0.2.0"
isort = "4.3.21"
jedi = "0.15.1"
Jinja2 = "2.10.1"
lazy-object-proxy = "1.4.1"
MarkupSafe = "1.1.1"
mccabe = "0.6.1"
parso = "0.5.1"
pexpect = "4.7.0"
pickleshare = "0.7.5"
promise = "2.2.1"
prompt-toolkit = "2.0.9"
ptyprocess = "0.6.0"
Pygments = "2.4.2"
pylint = "2.3.1"
python-dateutil = "2.8.0"
pytz = "2019.2"
requests = "2.22.0"
Rx = "1.6.1"
schema = "0.7.0"
singledispatch = "3.4.0.3"
six = "1.12.0"
sqlparse = "0.3.0"
traitlets = "4.3.2"
urllib3 = "1.25.3"
wcwidth = "0.1.7"
wrapt = "1.11.2"
xlrd = "1.2.0"
Pillow = "^8.1.1"
numpy = "^1.20.1"
pandas = "^1.2.3"
openpyxl = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
